tests/errors/no_main_program.f90
subroutine add(a, b, c)
    integer a, b, c
    c = a + b
    return
end